// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`CreateSCAPPolicy expect to render without error 1`] = `
<DocumentFragment>
  <div
    class="pf-c-content"
  >
    <h1
      class="pf-u-mb-md"
      data-ouia-component-id="OUIA-Generated-Text-1"
      data-ouia-component-type="PF4/Text"
      data-ouia-safe="true"
      data-pf-content="true"
    >
      Create SCAP policy
    </h1>
    <p
      class="pf-u-mb-md"
      data-ouia-component-id="OUIA-Generated-Text-2"
      data-ouia-component-type="PF4/Text"
      data-ouia-safe="true"
      data-pf-content="true"
    >
      Select the operating system and policy type for this policy.
    </p>
  </div>
  <form
    class="pf-c-form"
    novalidate=""
  >
    <div
      class="pf-c-form__group"
    >
      <div
        class="pf-c-form__group-label"
      >
        <label
          class="pf-c-form__label"
          for="benchmark"
        >
          <span
            class="pf-c-form__label-text"
          >
            Operating system
          </span>
          <span
            aria-hidden="true"
            class="pf-c-form__label-required"
          >
             *
          </span>
        </label>
         
      </div>
      <div
        class="pf-c-form__group-control"
      />
    </div>
  </form>
</DocumentFragment>
`;

exports[`CreateSCAPPolicy should render a spinner while loading 1`] = `
<DocumentFragment>
  <div
    class="ins-c-spinner"
    role="status"
  >
    <span
      class="pf-u-screen-reader"
    >
      Loading...
    </span>
  </div>
  <div
    class="pf-c-content"
  >
    <h1
      class="pf-u-mb-md"
      data-ouia-component-id="OUIA-Generated-Text-3"
      data-ouia-component-type="PF4/Text"
      data-ouia-safe="true"
      data-pf-content="true"
    >
      Create SCAP policy
    </h1>
    <p
      class="pf-u-mb-md"
      data-ouia-component-id="OUIA-Generated-Text-4"
      data-ouia-component-type="PF4/Text"
      data-ouia-safe="true"
      data-pf-content="true"
    >
      Select the operating system and policy type for this policy.
    </p>
  </div>
  <form
    class="pf-c-form"
    novalidate=""
  >
    <div
      class="pf-c-form__group"
    >
      <div
        class="pf-c-form__group-label"
      >
        <label
          class="pf-c-form__label"
          for="benchmark"
        >
          <span
            class="pf-c-form__label-text"
          >
            Operating system
          </span>
          <span
            aria-hidden="true"
            class="pf-c-form__label-required"
          >
             *
          </span>
        </label>
         
      </div>
      <div
        class="pf-c-form__group-control"
      />
    </div>
  </form>
</DocumentFragment>
`;

exports[`CreateSCAPPolicy should render benchmarks and no policies until one is selected 1`] = `
<DocumentFragment>
  <div
    class="pf-c-content"
  >
    <h1
      class="pf-u-mb-md"
      data-ouia-component-id="OUIA-Generated-Text-5"
      data-ouia-component-type="PF4/Text"
      data-ouia-safe="true"
      data-pf-content="true"
    >
      Create SCAP policy
    </h1>
    <p
      class="pf-u-mb-md"
      data-ouia-component-id="OUIA-Generated-Text-6"
      data-ouia-component-type="PF4/Text"
      data-ouia-safe="true"
      data-pf-content="true"
    >
      Select the operating system and policy type for this policy.
    </p>
  </div>
  <form
    class="pf-c-form"
    novalidate=""
  >
    <div
      class="pf-c-form__group"
    >
      <div
        class="pf-c-form__group-label"
      >
        <label
          class="pf-c-form__label"
          for="benchmark"
        >
          <span
            class="pf-c-form__label-text"
          >
            Operating system
          </span>
          <span
            aria-hidden="true"
            class="pf-c-form__label-required"
          >
             *
          </span>
        </label>
         
      </div>
      <div
        class="pf-c-form__group-control"
      >
        <div
          aria-selected="false"
          class="pf-c-tile pf-u-mr-md"
          role="option"
          tabindex="0"
        >
          <div
            class="pf-c-tile__header pf-m-stacked"
          >
            <div
              class="pf-c-tile__title"
            >
              RHEL 6
            </div>
          </div>
        </div>
        <div
          aria-selected="false"
          class="pf-c-tile pf-u-mr-md"
          role="option"
          tabindex="0"
        >
          <div
            class="pf-c-tile__header pf-m-stacked"
          >
            <div
              class="pf-c-tile__title"
            >
              RHEL 7
            </div>
          </div>
        </div>
        <div
          aria-selected="false"
          class="pf-c-tile pf-u-mr-md"
          role="option"
          tabindex="0"
        >
          <div
            class="pf-c-tile__header pf-m-stacked"
          >
            <div
              class="pf-c-tile__title"
            >
              RHEL 8
            </div>
          </div>
        </div>
      </div>
    </div>
  </form>
</DocumentFragment>
`;

exports[`CreateSCAPPolicy should render policies from the selected benchmark only 1`] = `
<DocumentFragment>
  <div
    class="pf-c-content"
  >
    <h1
      class="pf-u-mb-md"
      data-ouia-component-id="OUIA-Generated-Text-7"
      data-ouia-component-type="PF4/Text"
      data-ouia-safe="true"
      data-pf-content="true"
    >
      Create SCAP policy
    </h1>
    <p
      class="pf-u-mb-md"
      data-ouia-component-id="OUIA-Generated-Text-8"
      data-ouia-component-type="PF4/Text"
      data-ouia-safe="true"
      data-pf-content="true"
    >
      Select the operating system and policy type for this policy.
    </p>
  </div>
  <form
    class="pf-c-form"
    novalidate=""
  >
    <div
      class="pf-c-form__group"
    >
      <div
        class="pf-c-form__group-label"
      >
        <label
          class="pf-c-form__label"
          for="benchmark"
        >
          <span
            class="pf-c-form__label-text"
          >
            Operating system
          </span>
          <span
            aria-hidden="true"
            class="pf-c-form__label-required"
          >
             *
          </span>
        </label>
         
      </div>
      <div
        class="pf-c-form__group-control"
      >
        <div
          aria-selected="false"
          class="pf-c-tile pf-u-mr-md"
          role="option"
          tabindex="0"
        >
          <div
            class="pf-c-tile__header pf-m-stacked"
          >
            <div
              class="pf-c-tile__title"
            >
              RHEL 6
            </div>
          </div>
        </div>
        <div
          aria-selected="false"
          class="pf-c-tile pf-u-mr-md"
          role="option"
          tabindex="0"
        >
          <div
            class="pf-c-tile__header pf-m-stacked"
          >
            <div
              class="pf-c-tile__title"
            >
              RHEL 7
            </div>
          </div>
        </div>
        <div
          aria-selected="false"
          class="pf-c-tile pf-u-mr-md"
          role="option"
          tabindex="0"
        >
          <div
            class="pf-c-tile__header pf-m-stacked"
          >
            <div
              class="pf-c-tile__title"
            >
              RHEL 8
            </div>
          </div>
        </div>
      </div>
    </div>
  </form>
</DocumentFragment>
`;
